; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_msg_attach.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_msg_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_http_msg = type { %struct.vlc_http_stream* }
%struct.vlc_http_stream = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_http_msg_attach(%struct.vlc_http_msg* %0, %struct.vlc_http_stream* %1) #0 {
  %3 = alloca %struct.vlc_http_msg*, align 8
  %4 = alloca %struct.vlc_http_stream*, align 8
  store %struct.vlc_http_msg* %0, %struct.vlc_http_msg** %3, align 8
  store %struct.vlc_http_stream* %1, %struct.vlc_http_stream** %4, align 8
  %5 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %3, align 8
  %6 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %5, i32 0, i32 0
  %7 = load %struct.vlc_http_stream*, %struct.vlc_http_stream** %6, align 8
  %8 = icmp eq %struct.vlc_http_stream* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.vlc_http_stream*, %struct.vlc_http_stream** %4, align 8
  %12 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %3, align 8
  %13 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %12, i32 0, i32 0
  store %struct.vlc_http_stream* %11, %struct.vlc_http_stream** %13, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
